<resources>
    <string name="app_name">GoPetFitting</string>

    <!-- Log in -->
    <string name="login">User Log In</string>
    <string name="login_button">Log In</string>
    <string name="signup_login">Do not have an account? Create one.</string>

    <!-- Sign up -->
    <string name="signup">User Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signUpButton">Sign Up</string>

    <!-- Personal info -->
    <string name="personal_info">More About You</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target Weight</string>
    <string name="petName">Pet Name</string>
    <string name="petType">Pet Type</string>
    <string name="target_w">Target\nWeight</string>
    <string name="submit">Submit</string>

    <!-- Exercise -->
    <string name="exercise">Exercise</string>
    <string name="steps">Steps</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories Burned</string>
    <string name="time">Exercise Time</string>
    <string name="initVal"></string>

    <string name="record">Record</string>
    <string name="stop">Stop</string>
<!--    change profile photo choices-->
    <string-array name="photoArr">
        <item> </item>
        <item>take photo</item>
        <item>choose from gallery</item>
    </string-array>
    <!-- Summary -->
    <string name="summary">Summary</string>
    <string name="exerciseTime">Exercise Time</string>
    <string name="speed">Speed</string>
    <string name="return_to_profile">Return To Profile</string>

    <string name="api_key">AIzaSyCikSnL3XPDA6-WpP61pNdpvXqL2Boa6NE</string>

    <string name="username">User Name</string>
    <string name="score">Score</string>
    <string name="channel_name">Notifcation Name</string>
    <string name="channel_description">Notification Channel for the demo app</string>
    <string name="channel_id">Channel_Name_NUMAD_demo</string>
<!--store-->
    <string name="topetstore">Pet Store</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">BACK</string>
    <string name="toleaderboard">Leaderboard</string>
    <string name="shop">SHOP</string>
    <string name="check">Check Details</string>
    <string name="moments">MOMENTS</string>

    <string name="action_settings">Settings</string>
    <string name="message_edit_text_hint">Type a text</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="share">SHARE</string>
    <string name="post_growthScore_text">Share Status</string>
</resources>